--- a/handouts/config/avcfonts.sty
+++ b/handouts/config/avcfonts.sty
@@ -10,7 +10,7 @@
 \let\oldbm\bm
 \renewcommand{\bm}[1]{\ensuremath{\oldbm{#1}}} % caution: bm package conflicts with \xspace
 \newcommand{\mf}[1]{\ensuremath{\mathfrak{#1}}}
-\newcommand{\mr}[1]{\ensuremath{\mathrm{#1}}}
+\newcommand{\mr}[1]{\ensuremath{\text{#1}}}
 \newcommand{\bo}[1]{\ensuremath{\mathbf{#1}}}
 \newcommand{\ts}[1]{\ensuremath{{\textstyle#1}}}
 \newcommand{\ds}[1]{\ensuremath{{\displaystyle#1}}}
