Move linked diagram proof to appendix.

--- a/handouts/handouts.tex
+++ b/handouts/handouts.tex
@@ -63,6 +63,7 @@ headings=normal,
 	\include{\SectionsPath/fundamental-lemma-calculus-variations}
 	\include{\SectionsPath/unitary-invariances-hf-orbitals}
 	\include{\SectionsPath/pull-through-relation}
+	\include{\SectionsPath/linked-diagram-proof}
 \end{appendices}
 
 %\backmatter
