Add more chapters.

--- a/handouts/handouts.tex
+++ b/handouts/handouts.tex
@@ -55,7 +55,9 @@ headings=normal,
 \include{\SectionsPath/diagrams}
 \include{\SectionsPath/coupled-cluster}
 \include{\SectionsPath/perturbation-theory}
-%\include{\SectionsPath/perturbative-analysis}
+\include{\SectionsPath/perturbative-analysis}
+\include{\SectionsPath/orbital-relaxation}
+\include{\SectionsPath/response-theory}
 
 \begin{appendices}
 	\include{\SectionsPath/constrained-optimization}
@@ -64,6 +66,8 @@ headings=normal,
 	\include{\SectionsPath/unitary-invariances-hf-orbitals}
 	\include{\SectionsPath/pull-through-relation}
 	\include{\SectionsPath/linked-diagram-proof}
+	\include{\SectionsPath/thouless-theorem}
+	\include{\SectionsPath/orbital-rotations}
 \end{appendices}
 
 %\backmatter
